--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 layout: sidebar
-style: light
+style: dark
 
 plugins:
   - jekyll-octicons
@@ -27,7 +27,7 @@ projects:
     projects:
     # - repo-name
 
-# social_media:
+social_media:
   # behance: your_username
   # dribbble: your_username
   # facebook: your_username
@@ -38,10 +38,10 @@ projects:
   # medium: your_username
   # stackoverflow: your_user_id
   # telegram: your_username
-  # twitter: your_username
+  twitter: _chick_p
   # unsplash: your_username
   # vk: your_username
-  # website: http://your_website_url
+  website: https://blog.chick-p.work
   # youtube: your_username
 
 topics:
